add collection for classes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -44,3 +44,21 @@
 *****************************************************************************/
 
 // TODO: redefine projects layout.
+
+
+.courses {
+  .grid-item {
+    width: 250px;
+    margin-bottom: 10px;
+    a {
+      color: black;
+      text-decoration: none;
+      &:hover {
+        color: var(--global-theme-color);
+      }
+    }
+  }
+  .card img {
+    width: 100%;
+  }
+}
