got rid of hideous purple

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,11 +26,11 @@ body {
 }
 
 h1.post-title{
-  font-family: $fascinate;
+   font-family: "Roboto",sans-serif;
 }
 
 div.social{
-  height: 10px;
+  height: 20px;
 }
 
 p.desc{
