added colors and square icons

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,3 +36,22 @@ div.social{
 p.desc{
   font-weight: bold;
 }
+
+.fa-envelope{
+--global-text-color: #bb0000;
+}
+.ai-orcid{
+  --global-text-color: #a6ce39;
+}
+.ai-google-scholar{
+  --global-text-color: #2962ff;
+}
+.fa-github-square{
+  --global-text-color: #24292e;
+}
+.fa-linkedin{
+  --global-text-color: #0A66C2;
+}
+.fa-twitter-square{
+  --global-text-color: #1DA1F2;
+}
